--- a/app/src/main/res/layout/quaman.xml
+++ b/app/src/main/res/layout/quaman.xml
@@ -4,69 +4,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/quaman">
-
-    <ImageView
-        android:layout_width="320dp"
-        android:layout_height="130dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/tieudequaman" />
-
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:id="@+id/dapan"
-        android:text="Ly bia"
-        android:textColor="#F44336"
-        android:gravity="center"
-        android:textSize="50dp"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"/>
-
-    <RelativeLayout
-        android:layout_width="450dp"
-        android:layout_height="500dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bạn đã tìm ra đáp án:"
+        android:textColor="#FFEB3B"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:layout_gravity="center"
-        android:layout_marginTop="-80dp"
+        android:layout_marginTop="140dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="80dp" />
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="@drawable/branhsang"
         android:orientation="vertical">
-
         <ImageView
-            android:id="@+id/anhsang"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:src="@drawable/branhsang" />
-        <ImageView
-            android:id="@+id/hinhkc"
-            android:layout_centerInParent="true"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
             android:layout_gravity="center"
-            android:layout_marginTop="170dp"
-            android:src="@drawable/money" />
-
+            android:layout_marginTop="80dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/money"/>
         <TextView
-            android:layout_centerInParent="true"
-            android:layout_below="@id/hinhkc"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Bạn được tặng +5 ruby"
-            android:textColor="#CC5073"
-            android:textSize="24dp"
-            android:textStyle="bold" />
-    </RelativeLayout>
-
+            android:text="Bạn được tặng +25 ruby"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:textColor="#FFC107"/>
+    </LinearLayout>
     <Button
-        android:layout_marginTop="20dp"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:background="@drawable/choingayclick"
+        android:layout_marginTop="60dp"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
+        android:background="@drawable/button7"
         android:layout_gravity="center"
-        android:text="Tiếp Tục"
-        android:textAllCaps="false"
-        android:textSize="21dp"
-        android:id="@+id/tieptuc"
+        android:text="Tiếp tục"
         android:textColor="@color/black"
         android:textStyle="bold"/>
 </LinearLayout>
