--- a/app/src/main/res/layout/activity_man_choi.xml
+++ b/app/src/main/res/layout/activity_man_choi.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/manchoi"
     android:orientation="vertical"
-    tools:context=".ManChoi">
+    tools:context=".ManChoi"
+    android:weightSum="5">
     <TextView
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -81,11 +82,13 @@
         android:layout_gravity="center"
         android:id="@+id/ochu"
         android:layout_width="wrap_content"
+        android:layout_weight="1"
         android:layout_height="wrap_content"/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
         android:id="@+id/cautraloi"
+        android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <LinearLayout
