--- a/app/src/main/res/drawable/ochu.xml
+++ b/app/src/main/res/drawable/ochu.xml
@@ -3,4 +3,5 @@
     <stroke android:color="#474646"
         android:width="1dp"/>
     <corners android:radius="10dp"/>
+    <solid android:color="@color/white"></solid>
 </shape>
