--- a/app/src/main/res/layout/quaman.xml
+++ b/app/src/main/res/layout/quaman.xml
@@ -13,9 +13,17 @@
         android:textStyle="bold"
         android:layout_gravity="center"
         android:layout_marginTop="140dp"/>
-    <androidx.recyclerview.widget.RecyclerView
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="80dp" />
+        android:layout_height="80dp"
+        android:id="@+id/dapan"
+        android:text="Ly bia"
+        android:textColor="#F44336"
+        android:gravity="center"
+        android:textSize="40dp"
+        android:textStyle="bold"/>
+
     <LinearLayout
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
@@ -45,6 +53,7 @@
         android:background="@drawable/button7"
         android:layout_gravity="center"
         android:text="Tiếp tục"
+        android:id="@+id/tieptuc"
         android:textColor="@color/black"
         android:textStyle="bold"/>
 </LinearLayout>
