--- a/app/src/main/res/layout/activity_man_choi.xml
+++ b/app/src/main/res/layout/activity_man_choi.xml
@@ -31,9 +31,10 @@
         android:layout_marginLeft="250dp"
         android:layout_width="160dp"
         android:layout_height="70dp"
+        android:gravity="center"
         android:orientation="horizontal">
         <TextView
-            android:layout_marginLeft="75dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,6 +48,7 @@
     <LinearLayout
         android:layout_marginTop="40dp"
         android:layout_marginRight="10dp"
+        android:gravity="center"
         android:layout_gravity="center"
         android:layout_width="350dp"
         android:layout_height="250dp"
@@ -55,7 +57,7 @@
         <TextView
             android:id="@+id/cauhoi"
             android:layout_width="300dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="35dp"
             android:gravity="center"
             android:layout_height="wrap_content"
             android:text="C/h/ị/h/c/t/ủ"
