--- a/app/src/main/res/layout/quaman.xml
+++ b/app/src/main/res/layout/quaman.xml
@@ -23,15 +23,22 @@
         android:layout_marginTop="10dp"
         android:textStyle="bold"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="450dp"
         android:layout_height="500dp"
         android:layout_gravity="center"
         android:layout_marginTop="-80dp"
-        android:background="@drawable/branhsang"
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/anhsang"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:src="@drawable/branhsang" />
+        <ImageView
+            android:id="@+id/hinhkc"
+            android:layout_centerInParent="true"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_gravity="center"
@@ -39,6 +46,8 @@
             android:src="@drawable/money" />
 
         <TextView
+            android:layout_centerInParent="true"
+            android:layout_below="@id/hinhkc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -46,13 +55,13 @@
             android:textColor="#CC5073"
             android:textSize="24dp"
             android:textStyle="bold" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <Button
         android:layout_marginTop="20dp"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:background="@drawable/nenbutchoingay"
+        android:background="@drawable/choingayclick"
         android:layout_gravity="center"
         android:text="Tiếp Tục"
         android:textAllCaps="false"
