--- a/app/src/main/res/layout/dialog_doiten.xml
+++ b/app/src/main/res/layout/dialog_doiten.xml
@@ -54,8 +54,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
-        android:layout_marginTop="35dp"
-        android:layout_alignTop="@+id/tieude2">
+        android:layout_marginTop="-5dp"
+        android:layout_below="@+id/tieude2">
         <Button
             android:id="@+id/btnname"
             android:layout_width="140dp"
