--- a/app/src/main/res/layout/activity_chon_che_do_choi.xml
+++ b/app/src/main/res/layout/activity_chon_che_do_choi.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChonCheDoChoi"
-    android:background="@drawable/background_chon">
+    android:background="@drawable/backgroud_chonmanchoi">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,9 +14,10 @@
         android:orientation="vertical"
         android:gravity="center">
         <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginTop="100dp"
             android:layout_width="300dp"
             android:layout_height="200dp"
-            android:background="@drawable/chedogameshow"
+            android:background="@drawable/chedocoban"
             android:layout_centerHorizontal="true"
             android:layout_above="@+id/chedocoban"
             android:id="@+id/chedogameshow"
@@ -25,10 +26,10 @@
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="300dp"
             android:layout_height="200dp"
-            android:background="@drawable/chedocoban"
+            android:background="@drawable/chedoxephang"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/chedocoban">
         </androidx.appcompat.widget.AppCompatButton>
     </LinearLayout>
@@ -42,17 +43,17 @@
 
         android:layout_marginBottom="50dp">
         <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:id="@+id/btnback"
-            android:background="@drawable/btnback">
+            android:background="@drawable/iconback">
         </androidx.appcompat.widget.AppCompatButton>
         <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="15dp"
             android:id="@+id/btninfo"
-            android:background="@drawable/btninfo">
+            android:background="@drawable/icontrogiup">
         </androidx.appcompat.widget.AppCompatButton>
     </LinearLayout>
 </RelativeLayout>
