--- a/app/src/main/res/layout/activity_cuahang.xml
+++ b/app/src/main/res/layout/activity_cuahang.xml
@@ -256,7 +256,7 @@
             android:background="#00000000"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
-        <com.example.appvuatiengviet.CustomViewPager
+        <com.vtv.appvuatiengviet.CustomViewPager
             android:id="@+id/vp_shop_viewpager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
