--- a/app/src/main/res/layout/activity_game_show_round1.xml
+++ b/app/src/main/res/layout/activity_game_show_round1.xml
@@ -11,31 +11,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/nenmanchoi">
+        android:background="@drawable/nenmanchoi1">
         <TextView
             android:layout_width="90dp"
             android:layout_height="60dp"
             android:text="1"
             android:id="@+id/level"
-            android:paddingTop="7dp"
+            android:paddingTop="10dp"
             android:textStyle="bold"
-            android:textColor="#F44336"
-            android:textSize="30dp"
-            android:layout_marginLeft="30dp"
+            android:textColor="#FFC107"
+            android:textSize="25dp"
+            android:layout_marginLeft="20dp"
             android:textAlignment="center"
             android:layout_marginBottom="-70dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/khunglevel"/>
         <LinearLayout
-            android:background="@drawable/khungtien"
-            android:layout_marginLeft="250dp"
-            android:layout_width="160dp"
-            android:layout_height="70dp"
+            android:background="@drawable/khungthoigian"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
             android:gravity="center"
             android:orientation="horizontal">
             <TextView
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="3dp"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="250"
@@ -79,19 +79,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
             <ImageView
-                android:layout_marginTop="3dp"
                 android:layout_marginLeft="20dp"
                 android:id="@+id/backr1"
-                android:background="@drawable/backr1"
-                android:layout_width="60dp"
-                android:layout_height="60dp"/>
+                android:background="@drawable/iconout"
+                android:layout_width="80dp"
+                android:layout_height="80dp"/>
             <ImageView
                 android:id="@+id/nextr1"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dp"
-                android:background="@drawable/nextr1"
-                android:layout_width="60dp"
-                android:layout_height="60dp"/>
+                android:background="@drawable/iconnext"
+                android:layout_width="80dp"
+                android:layout_height="80dp"/>
         </RelativeLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginTop="10dp"
