--- a/app/src/main/res/layout/activity_game_show_round2.xml
+++ b/app/src/main/res/layout/activity_game_show_round2.xml
@@ -5,55 +5,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@drawable/backchoi"
+    android:background="@drawable/nenmanchoi2"
     android:id="@+id/deme"
     tools:context=".GameShowRound2">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:orientation="horizontal"
-        android:weightSum="3">
+        android:orientation="horizontal">
         <TextView
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
             android:layout_width="80dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:id="@+id/backr2"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="#684005"
-            android:textSize="26dp"
-            android:layout_marginLeft="5dp"
-            android:layout_gravity="center"
-            android:background="@drawable/backr2">
-        </TextView>
-        <ImageView
-            android:layout_width="100dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
+            android:id="@+id/backr2"
+            android:gravity="center"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/xephinh">
-        </ImageView>
-
+            android:background="@drawable/iconback">
+        </TextView>
         <TextView
             android:id="@+id/tym"
             android:layout_marginTop="10dp"
-            android:layout_width="80dp"
+            android:layout_width="110dp"
             android:layout_height="60dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
             android:text="2 ❤️"
             android:textAlignment="center"
             android:gravity="center"
             android:textStyle="bold"
-            android:textColor="#684005"
+            android:textColor="#FF9800"
             android:textSize="26dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="180dp"
             android:layout_gravity="center"
-            android:background="@drawable/khungtien">
+            android:background="@drawable/khungthoigian">
         </TextView>
     </LinearLayout>
 
@@ -61,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="305dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/backgroundimg"
+        android:background="@drawable/khungmanchoi2"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
@@ -104,7 +87,6 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="1"
-
                         android:textSize="30dp"
                         android:background="@drawable/oxam" />
                     <androidx.appcompat.widget.AppCompatButton
