--- a/app/src/main/res/layout/dialog_game_end_round1.xml
+++ b/app/src/main/res/layout/dialog_game_end_round1.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backchucmung">
+    android:background="@drawable/nenketthucround1">
     <ImageView
         android:layout_width="400dp"
         android:layout_height="180dp"
@@ -31,14 +31,13 @@
         android:text="Điểm số: 01/10"
         android:textColor="#FF6F00"
         android:textSize="35dp"
-        android:textStyle="bold">
-    </TextView>
+        android:textStyle="bold"/>
     <ImageView
         android:layout_width="400dp"
         android:layout_height="150dp"
         android:layout_marginTop="40dp"
         android:id="@+id/choi"
-        android:src="@drawable/bn_tiep"
+        android:src="@drawable/tvtiep"
         android:layout_below="@+id/diem"
         android:layout_centerHorizontal="true">
     </ImageView>
@@ -49,18 +48,28 @@
         android:layout_below="@+id/choi"
         android:layout_marginTop="40dp">
         <Button
-            android:layout_width="120dp"
+            android:layout_width="140dp"
             android:layout_height="50dp"
             android:id="@+id/choilai"
-            android:background="@drawable/tuchoir1">
+            android:background="@drawable/butthoatlick"
+            android:text="Từ chối"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:textSize="21dp"
+            android:textColor="@color/black">
         </Button>
         <Button
-            android:layout_width="120dp"
+            android:layout_width="140dp"
             android:layout_height="50dp"
             android:id="@+id/choitiep"
             android:layout_toRightOf="@+id/choilai"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/btnchapnhan">
+            android:layout_marginLeft="20dp"
+            android:text="Chấp nhận"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:textSize="21dp"
+            android:textColor="@color/black"
+            android:background="@drawable/choingayclick">
         </Button>
     </RelativeLayout>
 
