--- a/app/src/main/res/layout/dong_dapan_round2.xml
+++ b/app/src/main/res/layout/dong_dapan_round2.xml
@@ -5,7 +5,7 @@
     <TextView
         android:layout_width="99dp"
         android:layout_height="40dp"
-        android:background="@drawable/odapanr2"
+        android:background="@drawable/khungchinhta"
         android:id="@+id/ktu"
         android:textColor="@color/black"
         android:text="nghiêng"
