--- a/app/src/main/res/layout/fragment_avatar.xml
+++ b/app/src/main/res/layout/fragment_avatar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FragmentAvatar">
+    tools:context="com.vtv.vuatiengviet.FragmentAvatar">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_avatar"
         android:layout_width="match_parent"
