--- a/app/src/main/res/layout/activity_chon_che_do_choi.xml
+++ b/app/src/main/res/layout/activity_chon_che_do_choi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChonCheDoChoi"
+    tools:context="com.vtv.vuatiengviet.ChonCheDoChoi"
     android:background="@drawable/backgroud_chonmanchoi">
     <LinearLayout
         android:layout_width="match_parent"
