--- a/app/src/main/res/layout/activity_game_show_round1.xml
+++ b/app/src/main/res/layout/activity_game_show_round1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameShowRound1">
+    tools:context="com.vtv.vuatiengviet.GameShowRound1">
     <LinearLayout
         android:layout_above="@+id/layoutAd"
         android:id="@+id/lele"
