--- a/app/src/main/res/layout/activity_man_choi.xml
+++ b/app/src/main/res/layout/activity_man_choi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManChoi">
+    tools:context="com.vtv.vuatiengviet.ManChoi">
     <LinearLayout
         android:layout_above="@+id/layoutAd"
         android:id="@+id/lele"
