--- a/app/src/main/res/layout/fragment_khung.xml
+++ b/app/src/main/res/layout/fragment_khung.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FragmentKhung">
+    tools:context="com.vtv.vuatiengviet.FragmentKhung">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_khung"
         android:layout_width="match_parent"
