--- a/app/src/main/res/layout/dialog_enter_room.xml
+++ b/app/src/main/res/layout/dialog_enter_room.xml
@@ -1,27 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="400dp"
+    android:background="#00FFFFFF">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="350dp"
+        android:id="@+id/shopp"
+        android:background="@drawable/backgroud_doiten">
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/phi"
+        android:layout_width="match_parent"
+        android:layout_marginTop="170dp"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/roomNumberEditText"
+            android:layout_width="240dp"
+            android:layout_height="66dp"
+            android:background="@drawable/tv_doiten"
+            android:hint="Nhập mã phòng (6)"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold"
+            android:textColor="@color/black">
 
-    <EditText
-        android:id="@+id/roomNumberEditText"
+        </EditText>
+        <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="140dp"
+            android:layout_height="40dp"
+            android:text="Chấp nhận"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:layout_below="@+id/roomNumberEditText"
+            android:background="@drawable/choingayclick"/>
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/cham"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter 6-digit room number"
-        android:inputType="number"
-        android:maxLength="6"
-        android:importantForAccessibility="yes"
-        android:accessibilityLiveRegion="polite"
-        android:contentDescription="Room number input field" />
-
-    <Button
-        android:id="@+id/confirmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirm"
-        android:layout_gravity="center_horizontal"
-        android:importantForAccessibility="yes"
-        android:contentDescription="Confirm button" />
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:text="Chạm để thoát"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textStyle="italic">
+    </TextView>
+</RelativeLayout>
